[project]
name = "h2jupyter"
version = "0.1.0"
description = "A tool to run Jupyter kernels on HPC clusters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fabric2>=3.2.2",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scp>=0.15.0",
    "tornado>=6.5.1",
]

[project.scripts]
server = "h2jupyter.server:main"
tunnel = "h2jupyter.tunnel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
